--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.ryecrow</groupId>
-    <artifactId>tika-ofd</artifactId>
+    <artifactId>ofd-parser</artifactId>
     <version>1.0.0</version>
-    <name>tika-ofd</name>
-    <description>Apache Tika parser of OFD files</description>
+    <name>ofd-parser</name>
+    <description>OFD Parser</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -22,13 +22,12 @@
             <artifactId>kotlin-stdlib-jdk8</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
-
         <dependency>
-            <groupId>org.apache.tika</groupId>
-            <artifactId>tika-parsers</artifactId>
-            <version>1.26</version>
-            <scope>provided</scope>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.2.8</version>
         </dependency>
+
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-compress</artifactId>
